--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "gettext/gettext": "^4.5",
-    "fzaninotto/faker": "^1.9"
+    "fzaninotto/faker": "^1.9",
+    "ext-mbstring": "*"
   },
   "autoload": {
     "psr-4": {
